--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release Artifacts
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - 'dnm-test-wheels'
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
@@ -36,14 +36,6 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
-      - name: Install twine
-        run: |
-          python -m pip install twine
-      - name: Publish to PyPi
-        env:
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-          TWINE_USERNAME: nonhermitian
-        run: twine upload ./wheelhouse/*whl
   sdist-build:
     name: Build and Publish Release Artifacts
     needs: [build_wheels]
@@ -63,8 +55,3 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           path: ./dist/mthree*
-      - name: Publish to PyPi
-        env:
-          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-          TWINE_USERNAME: __token__
-        run: twine upload dist/mthree*
